# vidrop

./: .gitignore  README.md  mahjong_end.pgm  pyproject.toml
vidrop/: main.py  manager.py  media.py  multi_files.py
