[tool.poetry]
name = "vidrop"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.scripts]
vidrop = "vidrop.main:main"
multi = "vidrop.multi_files:main"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.7.0.72"
opencv-contrib-python = "^4.7.0.72"
numpy = "^1.24.2"
rich = "^13.3.3"
hydra-core = "^1.3.2"
ffmpeg-python = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
